ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2/input.ts.stderr
error: A class cannot extend 'void'
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2/input.ts:3:19
  |
3 | class C4a extends void {}
  |                   ^^^^

